Wed Feb 19 23:10:54 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* mkfs.c (argp_program_version): Make const.

Thu Sep  5 11:44:38 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* mkfs.c: Include <version.h>.
	(argp_program_version): Define with STANDARD_HURD_VERSION.

Mon Aug 19 15:18:30 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* mkfs.c (doc): Supply a useful value.

Tue Jul 23 19:34:58 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* mkfs.c (fsinit): `struct timespec' now uses a field prefix of `tv_'.
	* stati.c (timespec_rep): Likewise.

Fri Jun 21 02:12:16 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* dlabel.c (fd_get_device): Supply new args to store_create.

Sat May 11 01:20:18 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* mkfs.c (parse_opt): Use ARGP_ERR_UNKNOWN instead of EINVAL.

Fri May 10 15:50:38 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* dlabel.c (fd_get_device): Update to use libstore.
	<hurd/store.h>: New include.
	* Makefile (mkfs.ufs): Depend on ../libstore/libstore.a.

Tue Apr 30 10:06:21 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (include ../Makeconf): BEFORE dependencies.
	(all): Delete target.
	($(targets)): Each target depends on its associated .o.

Wed Apr  3 16:31:13 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* mkfs.c (main): In `Can't get disklabel' error message, specify
	which flag the user can use to supply the needed information.
	(mkfs): Fiddle with info message.

Sun Mar 31 14:34:28 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* stati.c (mode_rep): Prefix octal number with `0'.

Fri Mar 29 11:56:52 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* stati.c (main): Print mode & {in,}direct blocks too.
	(mode_rep): New function.
	(timespec_rep): P shouldn't be static.

	* mkfs.c (main): Argp interface changes.

Wed Mar 13 18:30:55 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* mkfs.c (options, args_doc, doc): New variables for option parsing.
	(struct amark): New type.