@@ -1,3 +1,8 @@
+Thu Apr 10 13:54:31 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* dlabel.c: Don't include <mach/sa/sys/ioctl.h>.
+	(_IOR, _IOC, IOC_OUT, IOCPARM_MASK): New macros.
+
 Wed Feb 19 23:10:54 1997  Miles Bader  <miles@gnu.ai.mit.edu>
 
 	* mkfs.c (argp_program_version): Make const.
